# rodeo-bufr-library

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  release.yml
bufr/schemas/: bufr_to_e_soh_message.json
bufr/src/: Descriptor.cpp  Descriptor.h  ESOHBufr.cpp  ESOHBufr.h  LogBuffer.cpp  Makefile  NorBufr.cpp  NorBufr.h  NorBufrIO.cpp  NorBufrIO.h  Sections.cpp  Sections.h  bufr2esohmsg.py  bufr2mqtt.py  bufr2txt.py  bufrenc.cpp  bufresohmsg.cpp  bufresohmsg_py.cpp  bufresohmsg_py.h  bufrprint.cpp  covjson2bufr.cpp  covjson2bufr.h  covjson2bufr.py  create_mqtt_message_from_bufr.py  getenvvalue.py
bufr/tables/wmo/: get_wmo_tables.sh
bufr/test/covjson/: example_1_0-20000-0-0201_.bufr  example_1_0-20000-0-0201_.json  example_2_0-20000-0-0626_.bufr  example_2_0-20000-0-0626_.json  example_3_0-20000-0-109_.bufr  example_3_0-20000-0-109_.json
bufr/test/test_data/: Oceanographic_subset_1.bufr.json  Oceanographic_subset_1.bufr.txt  Radar_WindProfile.buf.json  Radar_WindProfile.buf.txt  (+14 more)
src/bufr_tools/: Descriptor.cpp  ESOHBufr.cpp  ESOHBufr.h  Makefile  NorBufr.cpp  NorBufrIO.h  Oscar.cpp  Sections.h  Tables.cpp  bufr2txt.py  bufrenc  bufresohmsg_py  bufrprint  covjson2bufr.cpp  covjson2bufr.py  covjson2bufr_main  create_mqtt_message_from_bufr.py  getenvvalue.py
src/schemas/: bufr_to_e_soh_message.json
test/covjson/: example_1_0-20000-0-0201_.bufr  example_1_0-20000-0-0201_.json  example_2_0-20000-0-0626_.bufr  example_2_0-20000-0-0626_.json  example_3_0-20000-0-109_.bufr  example_3_0-20000-0-109_.json
test/test_data/: SYNOP_BUFR_2718.bufr.json  SYNOP_BUFR_2718.bufr.txt  SurfaceLand_subset_1.buf.txt  SurfaceLand_subset_2147.buf.json  SurfaceLand_subset_2147.buf.txt  SurfaceSee_subset_1.buf.txt  SurfaceSee_subset_12.buf.txt  SurfaceSee_subset_2.buf.txt  UpperAirAircraft_subset_42.buf.txt  VerticalSoundings_Aircraft.buf.txt  VerticalSoundings_Radiosonde.buf.txt
