[build-system]
requires = ["setuptools", "setuptools-scm", "pybind11~=2.11.1", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "bufr-tools"
description = "Tools for working with JSON-BUFR conversion in the E-SOH proejct."
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

#dependencies = ["pybind11 ~= 2.11.1"]


[tool.uv]
dev-dependencies = ['coverage', 'pre-commit', 'pytest', 'debugpy', 'ipython']

[tool.setuptools]
packages = [
  "bufr_tools",
  "bufr_tools.data.tables.opera",
  "bufr_tools.data.schemas",
  "bufr_tools.data.tables.wmo",
  "bufr_tools.data.oscar",
] #, "bufr_tools.data"]
package-dir = { "bufr_tools" = "src/bufr_tools" }
include-package-data = true

[tool.setuptools.package-data]
bufr_tools = ["**.json", "**.txt", "**.csv"]

[tool.cibuildwheel]
build-frontend = "build"
manylinux-x86_64-image = "manylinux2014"
archs = ["auto"]


[tool.cibuildwheel.linux]
before-all = "yum install -y rapidjson-devel"
